  select alternative diff formats. (Jelmer Vernooij, #555994)

Bug Fixes
*********

* ``bzr dpush``, ``bzr push`` and ``bzr send`` will now issue a warning
  instead of failing when dirty trees are involved. The corresponding
  ``dpush_strict``, ``push_strict`` and ``send_strict`` should be set to
  True explicitly to get the previous behaviour.  
  (Vincent Ladeuil, #519319)

* ``bzrlib.mutabletree.MutableTree.commit`` will now support a passed in
  config as in previous versions of bzrlib. (Robert Collins)

* Help messages generated by ``RegistryOption.from_kwargs`` list the
  switches in alphabetical order, rather than in an undefined order.
  (Martin von Gagern, #559409)

* Make sure the ``ExecutablePath`` and ``InterpreterPath`` are set in
  Apport crash reports, to avoid "This problem report applies to a program
  which is not installed any more" error.
  (Martin Pool, James Westby, #528114)

* When invoked with a range revision, ``bzr log`` doesn't show revisions
  that are not part of the ancestry anymore.
  (Vincent Ladeuil, #474807)

Improvements
************

* ``bzr commit`` will prompt before using a commit message that was
  generated by a template and not edited by the user.
  (Robert Collins, #530265)

* ``bzr missing`` read-locks the branches only once.
  (Andrew Bennetts)
  
* ``bzr pull`` locks the branches and tree only once.
  (Andrew Bennetts)
  
* Index lookups in pack repositories search recently hit pack files first.  
  In repositories with many pack files this can greatly reduce the
  number of files accessed, the number of bytes read, and the number of
  read calls.  An incremental pull via plain HTTP takes half the time and
  bytes for a moderately large repository.  (Andrew Bennetts)

* Less code is loaded at startup.  (Cold-cache start time is about 10-20%
  less.)
  (Martin Pool, #553017)

Documentation
*************

API Changes
***********

Internals
*********

* ``bzrlib.commands.Command.run_direct`` is no longer needed - the pre