@@ -28,6 +28,10 @@ Bug Fixes
   True explicitly to get the previous behaviour.  
   (Vincent Ladeuil, #519319)
 
+* ``bzr update`` when a pending merge in the working tree has been merged
+  into the master branch will no longer claim that old commits have become
+  pending merges. (Robert Collins, #562079)
+
 * ``bzrlib.mutabletree.MutableTree.commit`` will now support a passed in
   config as in previous versions of bzrlib. (Robert Collins)
 
